--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -12,6 +12,7 @@
       <th>ExperationDate</th>
       <th>ID</th>
       <th>Tag</th>
+      <th> </th>
     </thead>
   </tr>
   <tbody>
@@ -22,14 +23,26 @@
       <th  th:text="${task.experationDate}"></th>
       <th  th:text="${task.id}"></th>
       <th  th:text="${task.tag}"></th>
+      <th> <input type="submit" name="" value="Edit"></th>
     </tr>
   </tbody>
 </table>
+
+  <a href="taskAdd.html">
+    <button onclick="">Add</button>
+  </a>
+
+  <a href="taskAdd.html">
+    <button onauxclick="">Delete</button>
+  </a>
+
 <form>
 
 </form>
 
-<p><button style="background: #fdeaa8; width: 80px; height: 40px; border-radius: 5px; box-shadow: 0px 1px 3px; font-size: 20px;">Кнопка1</button></p>
+<script>
+
+</script>
 
 </body>
 </html>
