--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,17 +6,26 @@
  <body>
 
 <form name="test" method="post" th:action="@{/tasks}">
-<p><b> Логин: </b><br>
-<input type="text" size="40">
-<p><b> Пороль: </b><br>
-<input type="text" size="40">
-</p>
-  <input type="submit" name="" value="Регистрация"/>
 
+<p><b> Логин: </b><br>
+    <input type="text" size="40">
+
+<p><b> Пороль: </b><br>
+    <input type="text" size="40">
+</p>
+
+    <a href="tasks.html">
+        <button onclick="">Login</button>
+    </a>
+
+    <a href="registration.html">
+        <button onclick="">Registration</button>
+    </a>
 </form>
 
-<p><button th:action="@{/tasks}" style="background: #fdeaa8; width: 80px; height: 40px; border-radius: 5px; box-shadow: 0px 1px 3px; font-size: 20px;">Кнопка</button></p>
+ <script>
 
+ </script>
 </body>
 </html>
  
