Поправил HTML, исправлены методы контролеры, реализованы кнопки, доработка TaskDao и к нему интерфейс

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,11 +8,11 @@
  <p><b> Введите Пароль:</b></p>
   <p><input type="text" name="" value=""></p>
 
- <a href="tasks.html">
+ <a href="tasks">
   <button onclick=""> Apply</button>
  </a>
 
- <a href="login.html">
+ <a href="login">
   <button onclick="">Back</button>
  </a>
 
