--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 </head>
  <body>
 
-<form name="test" method="post" th:action="@{/tasks}">
+<form name="test" method="get" th:action="@{/tasks}">
 
 <p><b> Логин: </b><br>
     <input type="text" size="40">
@@ -14,11 +14,11 @@
     <input type="text" size="40">
 </p>
 
-    <a href="tasks.html">
+    <a href="tasks">
         <button onclick="">Login</button>
     </a>
 
-    <a href="registration.html">
+    <a href="registration">
         <button onclick="">Registration</button>
     </a>
 </form>
