--- a/src/main/resources/templates/taskAdd.html
+++ b/src/main/resources/templates/taskAdd.html
@@ -1,38 +1,42 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/taskAddStyle.css}">
 </head>
- <body>
- <form action="taskAdd" method="post" >
-    <table>
-      <tr>
-        <thead>
-          <th>Title</th>
-          <th>Text</th>
-          <th>CreationDate</th>
-          <th>ExperationDate</th>
-          <th>ID</th>
-          <th>Tag</th>
-        </thead>
-      </tr>
-      <tbody>
-          <tr>
-              <th> <input type="text" id="title" name="title" value=""></th>
-              <th> <input type="text" id="text" name="text" value=""></th>
-              <th> <input type="text" name="creationDate" value=""></th>
-              <th> <input type="text" name="experationDate" value=""></th>
-              <th> <input type="text" id="id" name=id value=""></th>
-              <th> <input type="text" name="Tag" value=""></th>
-          </tr>
-      </tbody>
-    </table>
-     <button type="submit">Apply</button>
- </form>
-
-<a href="tasks">
-    <button onclick="">Return</button>
-</a>
-
+<body>
+<div class="Space" >>
+    <video th:src="Space.mp4" autoplay loop muted></video>
+</div>
+<div class="taskAddTable">
+    <form action="taskAdd" method="post" >
+        <table>
+            <tr>
+                <thead>
+                <th>Title</th>
+                <th>Text</th>
+                <th>CreationDate</th>
+                <th>ExperationDate</th>
+                <th>ID</th>
+                <th>Tag</th>
+                </thead>
+            </tr>
+            <tbody>
+            <tr>
+                <th> <input type="text" id="title" name="title" value=""></th>
+                <th> <input type="text" id="text" name="text" value=""></th>
+                <th> <input type="text" name="creationDate" value=""></th>
+                <th> <input type="text" name="experationDate" value=""></th>
+                <th> <input type="text" id="id" name=id value=""></th>
+                <th> <input type="text" name="Tag" value=""></th>
+            </tr>
+            </tbody>
+        </table>
+    </form>
+    <div class="styleButton">
+        <input type="submit" onclick="" value="Apply">
+        <input type="button" onclick="location.href= 'tasks'" value="Return">
+    </div>
+</div>
 <script>
 
 </script>
