--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,21 @@
     <link rel="stylesheet" th:href="@{/css/loginStyle.css}">
 </head>
 <body>
-<section class="SpaceSection">
-    <div class="Space" >>
-        <video th:src="@{Space.mp4}" src="Space.mp4" autoplay loop muted></video>
+    <div class="area">
+        <ul class="cubes">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
     <div class="registrationLogin">
         <form name="test" method="get" th:action="@{/tasks}">
@@ -25,7 +37,6 @@
             </div>
         </form>
     </div>
-</section>
 </body>
 </html>
 
