Начальная рабочая стадия программы

--- a/src/main/resources/static/css/registrationStyle.css
+++ b/src/main/resources/static/css/registrationStyle.css
@@ -209,6 +209,10 @@
   font-size: 1vw;
 }
 
+.regLog b {
+  font-size: 0.95vw;
+}
+
 .styleButton input {
   font-size: 1vw;
   display: inline-block;
