--- a/src/main/resources/templates/editTask.html
+++ b/src/main/resources/templates/editTask.html
@@ -54,7 +54,7 @@
     </form>
 
     <div class="styleButton">
-        <input type="submit" onclick="" value="Apply">
+        <input type="submit" onclick="location.href= 'tasks'" value="Apply">
         <input type="button" onclick="location.href= 'tasks'" value="Return">
     </div>
 </div>
