--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -5,7 +5,7 @@
 }
 
 .area {
-	position:fixed;
+	position:absolute;
 	background: rgba(0,0,0);
 	height:100%;
 	width:100%;
@@ -33,98 +33,292 @@
 	left: 31%;
 	height: 25px;
 	width: 25px;
-	animation:animateSmall 2s linear infinite;
-	animation-delay: 1s;
+	animation:animateSmall1 2.2s linear infinite;
+
 }
 
 .cubes li:nth-child(2){
-	left: 33%;
+	left: 32.7%;
 	height: 100px;
 	width: 100px;
+	animation: animateBigCubes1 2.2s linear infinite;
 }
 
 .cubes li:nth-child(3){
-	left: 40%;
+	left: 38.4%;
 	height: 60px;
 	width: 60px;
+	animation: animateMediumCube1 2.2s linear infinite;
 }
 
 .cubes li:nth-child(4){
-	left: 681px;
+	left: 60%;
 	height: 40px;
 	width: 40px;
+	animation: animateBigCubes3 2.2s linear infinite;
+	animation-delay: 2.8s;
 }
 
+
 .cubes li:nth-child(5){
-	left: 727px;
+	left: 62.6%;
 	height: 75px;
 	width: 75px;
+	animation: animateBigCubes2 2.2s linear infinite;
+	animation-delay: 1s;
 }
 
 .cubes li:nth-child(6){
-	left: 809px;
+	left: 42.1%;
 	height: 30px;
 	width: 30px;
-	animation:animateSmall 2s linear infinite;
-	animation-delay: 2s;
+	animation:animateSmall2 2.2s linear infinite;
+	animation-delay: 1.3s;
 }
 
 .cubes li:nth-child(7){
-	left: 846px;
+	left: 44%;
 	height: 115px;
 	width: 115px;
+	animation: animateBigCubes2 2.2s linear infinite;
+	animation-delay: 1.3s;
 }
 
 .cubes li:nth-child(8){
-	left: 967px;
+	left: 50.5%;
 	height: 25px;
 	width: 25px;
-	animation:animateSmall 2s linear infinite;
-	animation-delay: 4s;
+	animation:animateSmall3 2.2s linear infinite;
+	animation-delay: 1.3s;
 }
 
 .cubes li:nth-child(9){
-	left: 998px;
+	left: 52.2%;
 	height: 30px;
 	width: 30px;
+	animation: animateMediumCube2  2.2s linear infinite;
+	animation-delay: 2.4s;
 }
 
 .cubes li:nth-child(10){
-	left: 1035px;
+	left: 54.1%;
 	height: 80px;
 	width: 80px;
+	animation: animateBigCubes3 2.2s linear infinite;
+	animation-delay: 2.4s;
 }
 
 .cubes li:nth-child(11){
-	left: 1121px;
+	left: 58.8%;
 	height: 15px;
 	width: 15px;
-	animation:animateSmall 2s linear infinite;
-	animation-delay: 6s;
+	animation:animateSmall1 2.2s linear infinite;
+	animation-delay: 2.4s;
 }
 
 .cubes li:nth-child(12){
-	left: 30%;
+	left: 30.5%;
 	height: 2px;
-	width: 692px;
+	width: 700px;
 	bottom: 180px;
 	animation:0;
 	box-shadow: 20px 20px 20px rgba(255,255,255,1);
 }
 
-@keyframes animateSmall{
+@keyframes animateSmall1{
 
 	0%{
 		transform: translateY(0px) rotate(0deg);
 	}
 
-	50%{
-		transform: translateY(-100px) rotate(-200deg);
+	44%{
+		transform: translateY(0px) rotate(0deg);
 	}
 
+	60%{
+		transform: translateY(-95px) rotate(-100deg);
+	}
+
+	62% {
+		transform: translateY(-102px) rotate(-100deg);
+	}
+
+	64% {
+		transform: translateY(-95px) rotate(-100deg);
+	}
+
+	82%{
+		transform: translateY(-1px) rotate(-220deg);
+	}
+	83%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+
+	94%{
+		transform: translateY(-7px) rotate(0deg);
+	}
 	100%{
 		transform: translateY(0px) rotate(0deg);
 	}
+}
+
+@keyframes animateSmall2{
+
+	0%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+	44%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+	60%{
+		transform: translateY(-65px) rotate(-100deg);
+	}
+
+	62% {
+		transform: translateY(-72px) rotate(-100deg);
+	}
+
+	64% {
+		transform: translateY(-65px) rotate(-100deg);
+	}
+
+	82%{
+		transform: translateY(-1px) rotate(-220deg);
+	}
+	83%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+
+	94%{
+		transform: translateY(-7px) rotate(0deg);
+	}
+	100%{
+		transform: translateY(0px) rotate(0deg);
+	}
+}
+
+@keyframes animateSmall3{
+
+	0%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+	44%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+	60%{
+		transform: translateY(-75px) rotate(-100deg);
+	}
+
+	62% {
+		transform: translateY(-82px) rotate(-100deg);
+	}
+
+	64% {
+		transform: translateY(-75px) rotate(-100deg);
+	}
+
+	82%{
+		transform: translateY(-1px) rotate(-220deg);
+	}
+	83%{
+		transform: translateY(0px) rotate(0deg);
+	}
+
+
+	94%{
+		transform: translateY(-7px) rotate(0deg);
+	}
+	100%{
+		transform: translateY(0px) rotate(0deg);
+	}
+}
+
+@keyframes animateMediumCube1 {
+	0% {
+		transform: translateY(0) rotate(0deg);
+	}
+
+	44%{
+		transform: translateY(0) rotate(0deg);
+	}
+
+	57%{
+		transform: translateY(-10px) rotate(3deg);
+	}
+
+	70%{
+		transform: translateY(0) rotate(0deg);
+	}
+
+	80%{
+		transform: translateY(-3px) rotate(0deg);
+	}
+
+	100%{
+		transform: translateY(0) rotate(0deg)
+	}
+}
+
+@keyframes animateMediumCube2 {
+	0% {
+		transform: translateY(0) rotate(0deg);
+	}
+
+	44%{
+		transform: translateY(0) rotate(0deg);
+	}
+
+	57%{
+		transform: translateY(-20px) rotate(-7deg);
+	}
+
+	70%{
+		transform: translateY(0) rotate(0deg);
+	}
+
+	80%{
+		transform: translateY(-3px) rotate(0deg);
+	}
+
+	100%{
+		transform: translateY(0) rotate(0deg)
+	}
+}
+
+@keyframes animateBigCubes1 {
+	0%   { transform: scale(1,1)      translateY(0); }
+	10%  { transform: scale(1.1,.9)   translateY(0); }
+	30%  { transform: scale(.9,1.1)   translateY(-30px); }
+	50%  { transform: scale(1.05,.95) translateY(0); }
+	57%  { transform: scale(1,1)      translateY(-7px); }
+	64%  { transform: scale(1,1)      translateY(0); }
+	100% { transform: scale(1,1)      translateY(0); }
+}
+
+@keyframes animateBigCubes2 {
+	0%   { transform: scale(1,1)      translateY(0); }
+	10%  { transform: scale(1.1,.9)   translateY(0); }
+	30%  { transform: scale(.9,1.1)   translateY(-30px); }
+	50%  { transform: scale(1.05,.95) translateY(0); }
+	57%  { transform: scale(1,1)      translateY(-7px); }
+	64%  { transform: scale(1,1)      translateY(0); }
+	100% { transform: scale(1,1)      translateY(0); }
+}
+
+@keyframes animateBigCubes3 {
+	0%   { transform: scale(1,1)      translateY(0); }
+	10%  { transform: scale(1.1,.9)   translateY(0); }
+	30%  { transform: scale(.9,1.1)   translateY(-40px); }
+	50%  { transform: scale(1.05,.95) translateY(0); }
+	57%  { transform: scale(1,1)      translateY(-7px); }
+	64%  { transform: scale(1,1)      translateY(0); }
+	100% { transform: scale(1,1)      translateY(0); }
 }
 
 .registrationLogin {
@@ -145,6 +339,10 @@
 
 .registrationLogin input {
     font-size: 1vw;
+}
+
+.registrationLogin b {
+    font-size: 0.95vw;
 }
 
 .styleButton input {
