--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -28,35 +28,42 @@
 
 </div >
 <div class="taskTable">
-  <table>
-    <tr>
-      <thead>
-      <th>Title</th>
-      <th>Text</th>
-      <th>CreationDate</th>
-      <th>ExperationDate</th>
-      <th>ID</th>
-      <th>Tag</th>
-      <th> </th>
-      </thead>
-    </tr>
-    <tbody>
-    <tr th:each="task : ${tasks}">
-      <th  th:text="${task.title}"></th>
-      <th  th:text="${task.text}"></th>
-      <th  th:text="${task.creationDate}"></th>
-      <th  th:text="${task.experationDate}"></th>
-      <th  th:text="${task.id}"></th>
-      <th  th:text="${task.tag}"></th>
-      <th> <a th:href="@{/editTask/{id}(id=${task.id})}"> <button onclick="">Edit</button></a></th>
-    </tr>
-    </tbody>
-  </table>
 
-  <div class="styleButton">
-    <input type="button" onclick="location.href= 'taskAdd'" value="Add">
-    <input type="button" onclick="location.href= 'taskAdd'" value="Delete">
-  </div>
+    <table>
+      <tr>
+        <thead>
+        <th>Title</th>
+        <th>Text</th>
+        <th>CreationDate</th>
+        <th>ExperationDate</th>
+        <th>ID</th>
+        <th>Tag</th>
+        <th> </th>
+        </thead>
+      </tr>
+      <tbody>
+      <tr th:each="task : ${tasks}">
+        <th  th:text="${task.title}"></th>
+        <th  th:text="${task.text}"></th>
+        <th  th:text="${task.creationDate}"></th>
+        <th  th:text="${task.experationDate}"></th>
+        <th  th:text="${task.id}"></th>
+        <th  th:text="${task.tag}"></th>
+        <th> <a th:href="@{/editTask/{id}(id=${task.id})}"> <button onclick="">Edit</button></a></th>
+
+         <th>
+           <form th:action="@{/deleteTask/{id}(id=${task.id})}" method="post">
+             <button type="submit">Delete</button>
+           </form>
+         </th>
+
+      </tr>
+      </tbody>
+    </table>
+
+    <div class="styleButton">
+      <input type="button" onclick="location.href= 'taskAdd'" value="Add">
+    </div>
 </div>
 <form>
 
