--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -37,6 +37,12 @@
      <p><input type="text" id="login" name="login" value=""></p>
      <p><b> Введите Пароль:</b></p>
      <p><input type="text" id="password" name="password" value=""></p>
+     <p><b> Выберите Роль:</b></p>
+     <p> <select id="personRole" name="personRole">
+         <option value = "1" >Admin</option>
+         <option value = "2" >Manager</option>
+         <option value = "3" >User</option>
+     </select> </p>
   <div class="styleButton">
    <input type="button" onclick="location.href = 'login'" value="Back">
    <input type="submit" onclick="location.href = 'login'"  value="Registration">
