--- a/src/main/resources/static/css/tasksStyle.css
+++ b/src/main/resources/static/css/tasksStyle.css
@@ -189,6 +189,33 @@ body{
 
 }
 
+.profileTable{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -355px;
+  left: 750px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: sans-serif;
+
+  font-size: 2vw;
+}
+
+.profileTable th {
+  font-size: 1vw;
+  color: white;
+}
+
+.profileTable tr {
+  font-size: 1vw;
+  color: white;
+}
+
+
 .taskTable {
   width: 100%;
   height: 100%;
